# architect_rss_22

./: .gitignore  LICENSE.txt  README.md  agv_controller_log.csv  requirements.txt  requirements_hw.txt  setup.cfg  setup.py
architect/: test_jit.py
architect/analysis/: __init__.py  lipschitz_analyzer.py  sensitivity_analyzer.py  variance_analyzer.py  worst_case_cost_analyzer.py
architect/design/: __init__.py  bounded_design_problem.py  bounded_exogenous_parameters.py  design_parameters.py  design_problem.py  exogenous_parameters.py  types.py
architect/design/problem/: types.py  (+3 more)
architect/optimization/: __init__.py  adversarial_local_genetic_optimizer.py  adversarial_local_optimizer.py  variance_regularized_optimizer.py  variance_regularized_optimizer_ad.py  variance_regularized_optimizer_cma.py
logs/agv_localization/: design_optimization.txt  sensitivity_analysis.txt  worst_case_cost_analysis.txt
logs/multi_agent_manipulation/: design_optimization_1024_samples_0p5x0p5xpi_4_target_9x32x4_network_spline_1e-1_variance_weight.txt  design_optimization_128_samples_1x1x0_target_9x32x4_network_spline_1e-1_variance_weight.txt  design_optimization_128_samples_1x1xpi_4_target_9x32x4_network_spline_1e-1_variance_weight.txt  design_optimization_2048_samples_1x1x1_target.txt  design_optimization_512_samples_0p5x0p5xpi_4_target_9x32x4_network_spline_1e-1_variance_weight.txt
prototyping/: NumPyro Experiments.ipynb  README.md  bendforming_dynamics.ipynb  continuous_control_sensitivity.ipynb  cv_tests.ipynb  example_trace.txt  example_trace_ground_truth.txt  frugal_ekf.ipynb  gen_example.ipynb  manipulation.ipynb  microgrid.ipynb  microgrid_balanced_transform.ipynb  microgrid_modal_transform.ipynb  quad_2d_wind.ipynb
(+678 files in other folders)
